assets/css/style.css
/* ... */
.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
  background-color: #2C3E50;
  border-color: #2C3E50;
}
.btn-primary .badge {
  color: #2C3E50;
  background-color: white;
}
.btn-success {
  color: white;
  background-color: #18BC9C;
  border-color: #18BC9C;
  font-weight: 700;
}
.btn-success:hover,
.btn-success:focus,
.btn-success:active,
.btn-success.active,
.open .dropdown-toggle.btn-success {
  color: white;
  background-color: #128f76;
  border-color: #11866f;
}
.btn-success:active,
.btn-success.active,
.open .dropdown-toggle.btn-success {
  background-image: none;
}
.btn-success.disabled,
.btn-success[disabled],
fieldset[disabled] .btn-success,
.btn-success.disabled:hover,
.btn-success[disabled]:hover,
fieldset[disabled] .btn-success:hover,
.btn-success.disabled:focus,
.btn-success[disabled]:focus,
fieldset[disabled] .btn-success:focus,
.btn-success.disabled:active,
.btn-success[disabled]:active,
fieldset[disabled] .btn-success:active,
.btn-success.disabled.active,
.btn-success[disabled].active,
fieldset[disabled] .btn-success.active {
  background-color: #18BC9C;
  border-color: #18BC9C;
}
.btn-success .badge {
  color: #18BC9C;
  background-color: white;
}
.btn-social {
  display: inline-block;
  height: 50px;
  width: 50px;
  border: 2px solid white;
  border-radius: 100%;
  text-align: center;
  font-size: 20px;
  line-height: 45px;
}
.btn:focus,
.btn:active,
.btn.active {
  outline: none;
}
.portfolio-item a {
    text-decoration: none;
}
.scroll-top {
  position: fixed;
  right: 2%;
  bottom: 2%;
  width: 50px;
  height: 50px;
  z-index: 1049;
}
.scroll-top .btn {
  font-size: 20px;
  width: 50px;
  height: 50px;
  border-radius: 100%;
  line-height: 28px;
}
.scroll-top .btn:focus {
  outline: none;
}

/*** Header & Footer ***/
.navbar-custom,
footer .footer-below {
    background: #6C815E;
}

.navbar-custom {  
  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;  
  text-transform: uppercase;
  font-weight: 700;
  border: none;
}

.navbar-custom .navbar-nav li a,
.navbar-custom .navbar-brand,
.social-footer a {
    -webkit-transition: color 0.3s ease-in-out;
    -moz-transition: color 0.3s ease-in-out;
    -o-transition: color 0.3s ease-in-out;
    transition: color 0.3s ease-in-out;  
}

.navbar-custom .navbar-brand,
.social-footer a {
    color: #fff;    
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus,
.navbar-custom .navbar-nav li a:hover,
.navbar-custom .navbar-nav li a:focus,
/* Social icons in footer */
.social-footer a:hover,
.social-footer a:focus {
    color: #000;
}

.navbar-custom .navbar-nav li a:hover,
.navbar-custom .navbar-nav li a:focus {
    border-bottom: solid 2px #000;
    
}

/* Links & Buttons */
.btn-primary {
  color: white;
  background-color: #6C815E;
  border-color: #000;
  font-weight: 700;
  -webkit-transition: background 0.3s ease-in-out, border-color 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out, border-color 0.3s ease-in-out;
  -o-transition: background 0.3s ease-in-out, border-color 0.3s ease-in-out;
  transition: background 0.3s ease-in-out, border-color 0.3s ease-in-out;
}


.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary:active:hover,
.btn-primary:active:focus,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
  color: white;
  background-color: #000;
  border-color: #000;
}

/* Footer */
.social-footer .fa {
    font-size: 2.5em;
}

.social-footer span {
    margin: 0 20px;
}

.social-footer hr {
    width: 50%;
}


/*** Homepage ***/
footer hr,
body.portfolio footer hr {
    border-top-color: #fff;
}

/* About Me Summary */
.home-intro {
    margin-top: 100px; 
    padding-top: 125px;
    padding-bottom: 125px;
    background: url(../images/pexels-photo-129882-transparent.jpeg) no-repeat bottom center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; 
}

.home-intro p {
    font-size: 2em;    
}

.home-intro img {
   margin-top: -45px;
}

/* Featured Portfolio Items */
#home-portfolio {
    margin-top: 100px;
    padding-top: 125px;
    padding-bottom: 125px;
    background: url(../images/skyline-buildings-new-york-skyscrapers-transparent.jpg) no-repeat bottom center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;   
}

.feat-portfolio h2,
.prof-services h2,
.feat-posts h2,
.client-list h2 {
    margin-bottom: 50px;
}

.feat-portfolio .thumbnail {
    min-height: 625px;      
}

.feat-portfolio .thumbnail,
.prof-services .thumbnail,
.feat-posts .thumbnail {
    padding: 25px;
}

.feat-portfolio .thumbnail h3,
.feat-portfolio .thumbnail img,
.prof-services h3,
.prof-services i {
    margin-bottom: 25px;
}

.portfolio-item button {
    font-size: 1.25em;
}

/* Featured Posts */
.feat-posts .thumbnail {
    min-height: 525px;   
}

.feat-posts .thumbnail,
.feat-portfolio .thumbnail {
    border-color: #555;
}

.feat-posts .thumbnail hr {
    border-top-color: #555;
}


/*** About Page ***/
.about-intro {
    margin-top: 50px;     
}

.about-intro button {
    margin: 50px auto;
    font-size: 1.25em;
}

.about-intro h3 {
    margin-top: 30px;
    margin-bottom: 10px;
    text-transform: capitalize;
}

.about-intro ul,
.pf-single ul {
    list-style: square;
}
/* ... */

